--- a/src/assets/scss/partials/reset.scss
+++ b/src/assets/scss/partials/reset.scss
@@ -4,5 +4,9 @@
     box-sizing: border-box;
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
-
-
+:root {
+    --blue: #1e90ff;
+    --black: #000000;
+    --white: #ffffff;
+    --grey: #303030;
+      }
