--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -12,6 +12,10 @@
     justify-content: space-between;
 }
 
+.justify-content-center {
+    justify-content: center;
+}
+
 .align-items-center{
     align-items: center;
 }
